@@ -146,15 +146,17 @@ CONTAINS
     ALLOCATE(NEXT_OBC2(IOBCN))       ;NEXT_OBC2  = 0
     ALLOCATE(FLUXOBN(1:NT))          ;FLUXOBN    = ZERO
     ALLOCATE(IUCP(0:NT))             ;IUCP       = 1
-    ALLOCATE(XFLUX_OBCN(IOBCN+1))    ;XFLUX_OBCN = ZERO
-    ALLOCATE(UARD_OBCN(IOBCN))     ;UARD_OBCN  = ZERO  ! changed dimensions from IOBCN+1 RJT 2015
-    ALLOCATE(XFLUX_OBC(IOBCN+1,KBM1));XFLUX_OBC  = ZERO
+!JQI NOV2021
+    ALLOCATE(XFLUX_OBCN(IOBCN))    ;XFLUX_OBCN = ZERO ! KURT GLAESEMANN remove +1 from dimension IOBCN
+    ALLOCATE(UARD_OBCN(IOBCN))     ;UARD_OBCN  = ZERO ! KURT GLAESEMANN remove +1 from dimension IOBCN
+    ALLOCATE(XFLUX_OBC(IOBCN,KBM1));XFLUX_OBC  = ZERO ! KURT GLAESEMANN remove +1 from dimension IOBCN
 #   if defined (ICE)
 ! - begin afm 20171113 for ice open boundary -------------
-    ALLOCATE(UIARD_OBCN(IOBCN+1))     ;UIARD_OBCN  = ZERO
-    ALLOCATE(XFLUX_ICE_OBC(IOBCN+1))     ;XFLUX_ICE_OBC  = ZERO
+    ALLOCATE(UIARD_OBCN(IOBCN))     ;UIARD_OBCN  = ZERO ! KURT GLAESEMANN remove +1 from dimension IOBCN
+    ALLOCATE(XFLUX_ICE_OBC(IOBCN))     ;XFLUX_ICE_OBC  = ZERO ! KURT GLAESEMANN remove +1 from dimension IOBCN
 ! - end afm 20171113 for ice open boundary -------------
 #   endif
+!JQI NOV2021
 
     ALLOCATE(TEMP_OBC(IOBCN,KBM1))   ;TEMP_OBC   = ZERO
     ALLOCATE(SALT_OBC(IOBCN,KBM1))   ;SALT_OBC   = ZERO
