@@ -1377,7 +1377,9 @@ End Subroutine Read_Sed_Params
     allocate(sed(i)%eflx(0:mt     ))      ; sed(i)%eflx = 0.0_sp
     allocate(sed(i)%dflx(0:mt     ))      ; sed(i)%dflx = 0.0_sp
     allocate(sed(i)%cdis(500      ))      ; sed(i)%cdis = 0.0_sp
-    allocate(sed(i)%cflx(tmp2,kbm1))      ; sed(i)%cflx = 0.0_sp
+!JQI NOV2021
+    allocate(sed(i)%cflx(tmp3,kbm1))      ; sed(i)%cflx = 0.0_sp ! KURT GLAESEMANN - remove + 1 from dimension
+!JQI NOV2021
     allocate(sed(i)%cobc(tmp3     ))      ; sed(i)%cobc = 0.0_sp
     allocate(sed(i)%depm(0:mt     ))      ; sed(i)%depm = 0.0_sp
     allocate(sed(i)%wset0(0:mt,kb  ))     ; sed(i)%wset0 = 0.0_sp
